{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "82b433f4-47bd-4f19-8155-ed6222364215",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "100ea5e0-e783-4059-8caa-37c8590f021d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ee1fa0f-70b8-482e-a996-48ce926080a7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}